--- a/index.html
+++ b/index.html
@@ -704,6 +704,39 @@ table tbody td:nth-child(7){
 td:nth-child(7) details{
   max-width: none !important;
 }
+
+/* ===== Galaxy Fold / tablet aspect-safe charts ===== */
+@media (max-width: 980px){
+  .charts{ grid-template-columns: 1fr !important; }
+}
+
+/* Use aspect-ratio to avoid "squished" charts on unusual aspect devices */
+.chartbox{ display:flex; flex-direction:column; }
+.chartbox .canvas-wrap{
+  width:100% !important;
+  height:auto !important;
+  aspect-ratio: 16 / 9;
+  min-height: 220px;
+  max-height: 460px;
+}
+
+/* Fold-like widths with low height: keep readable */
+@media (max-height: 720px){
+  .chartbox .canvas-wrap{
+    aspect-ratio: 16 / 8;
+    min-height: 180px;
+    max-height: 360px;
+  }
+}
+
+/* Narrow but tall devices */
+@media (max-width: 560px){
+  .chartbox .canvas-wrap{
+    aspect-ratio: 4 / 3;
+    min-height: 240px;
+    max-height: 420px;
+  }
+}
 </style>
 </head>
 <body>
@@ -1607,6 +1640,10 @@ const installChartResizeObservers = () => {
 
   window.addEventListener("resize", scheduleChartResize);
   window.addEventListener("orientationchange", scheduleChartResize);
+    if (window.visualViewport){
+      visualViewport.addEventListener("resize", scheduleChartResize);
+      visualViewport.addEventListener("scroll", scheduleChartResize);
+    }
 };
   const createChartsIfNeeded = () => {
     if (chartTotal || chartDaily) return;
