--- a/index.html
+++ b/index.html
@@ -904,6 +904,24 @@ td:nth-child(7) details{
   max-width: 100%;
   box-sizing: border-box;
 }
+
+/* === Monthly expense red styling === */
+#kpiFixed,
+#kpiFixedSub{
+  color: var(--bad) !important;
+}
+
+/* 월간지출 테이블 컬럼 (8번째 컬럼) */
+#tbody tr td:nth-child(8){
+  color: var(--bad) !important;
+}
+
+
+/* === Left panel fixed expense total red === */
+#feTotal{
+  color: var(--bad) !important;
+}
+
 </style>
 </head>
 <body>
